# rataify

./: '  .env  Cargo.toml  README.md  TODO.md  config.yml  decode_token.py  image.txt  log.txt  test.json
_examples/: api_search.rs  api_tracks.rs  creds.rs  util.rs
assets/: .env
crates/rotify/: Cargo.toml  TODO.md
crates/rotify/examples/: api.rs
crates/rotify/src/: lib.rs  prompt.rs
crates/rotify/src/api/: mod.rs  users.rs
crates/rotify/src/api/player/: device.rs  mod.rs  playback.rs  queue.rs  state.rs  user.rs
crates/rotify/src/api/tracks/: audio.rs  fetch.rs  info.rs  mod.rs  track.rs  user.rs
crates/rotify/src/api/users/: follow.rs  mod.rs  profile.rs
crates/rotify/src/auth/: callback.rs  credentials.rs  mod.rs
crates/rotify/src/model/: audio.rs  follow.rs  mod.rs  paginate.rs  playback.rs  queue.rs  tracks.rs  user.rs  users.rs
crates/rotify/src/model/player/: device.rs  mod.rs  playback.rs  queue.rs
crates/tupy/: .gitignore  Cargo.toml  TODO.md  debug.txt  decode_token.py
crates/tupy/_examples/: api_albums.rs  api_artists.rs  api_categories.rs  api_chapters.rs  api_episodes.rs  api_genres.rs  api_markets.rs  api_player.rs  api_playlists.rs  api_shows.rs  api_users.rs  auth_code.rs  pkce.rs  user.rs  util.rs
crates/tupy/examples/: Cargo.toml
crates/tupy/examples/src/: main.rs  util.rs
crates/tupy/src/: lib.rs
crates/tupy/src/api/: auth.rs  mod.rs  public.rs  request.rs  user.rs
crates/tupy/src/api/flow/: auth.rs  credential.rs  creds.rs  mod.rs  pkce.rs
crates/tupy/src/api/response/: album.rs  artist.rs  category.rs  episode.rs  mod.rs  player.rs  playlist.rs  search.rs  track.rs  user.rs
examples/: api_albums.rs  api_audiobooks.rs  api_episodes.rs  api_genres.rs  api_playlists.rs  api_users.rs  ascii_cover.rs  async.rs  auth_code.rs  callback.rs  creds.rs  crossterm.rs  image.rs  keyevent.rs  pkce.rs  spot_api.rs  spotify.rs  spotify_api.rs  user.rs
examples/src/: main.rs  util.rs
src/: action.rs  app.rs  config.rs  error.rs  errors.rs  event.rs  input.rs  key.rs  keymap.rs  lib.rs  logging.rs  main.rs  spotify_util.rs  state.rs  tui.rs  ui.rs  uri.rs
src/api/: auth.rs  datetime.rs  markets.rs  mod.rs  public.rs  public_api.rs  request.rs  response.rs  user.rs  user_api.rs
src/api/flow/: auth.rs  credential.rs  creds.rs  mod.rs  pkce.rs
src/api/flow/auth/: cred.rs  mod.rs
src/api/flow/creds/: mod.rs
src/api/flow/pkce/: cred.rs  mod.rs
src/api/response/: album.rs  artist.rs  audiobook.rs  episode.rs  mod.rs  playlist.rs  track.rs  user.rs
src/spot/: mod.rs
src/spot/api/: mod.rs
src/spot/api/device/: mod.rs
src/spot/api/player/: mod.rs  playback.rs  response.rs  state.rs
src/spot/auth/: credentials.rs  mod.rs
src/spotify/: cache.rs  credentials.rs  mod.rs
src/spotify/api/: body.rs  mod.rs  playback.rs  user.rs
src/spotify/api/response/: error.rs  mod.rs  playback.rs  queue.rs  user.rs
src/spotify/auth/: cache.rs  callback.rs  mod.rs
src/state/: mod.rs  modal.rs  playback.rs
src/state/actions/: mod.rs
src/state/model/: album.rs  artist.rs  episode.rs  item.rs  mod.rs  playlist.rs  show.rs  track.rs
src/state/window/: landing.rs  library.rs  mod.rs  queue.rs
src/state/window/landing/: album.rs  artist.rs  mod.rs  playlist.rs  show.rs
src/state/window/modal/: actions.rs  device.rs  goto.rs  mod.rs
src/state/wrappers/: mod.rs
src/ui/: action.rs  footer.rs  header.rs  icon.rs  list_view.rs  mod.rs  modal.rs  playback.rs  queue.rs  tabs.rs  window.rs
src/ui/components/: link.rs  mod.rs
src/ui/modal/: actions.rs  add_to_playlist.rs  artists.rs  devices.rs  goto.rs  mod.rs
src/ui/window/: landing.rs  library.rs  mod.rs  queue.rs
src/ui/window/landing/: album.rs  artist.rs  audiobook.rs  mod.rs  playlist.rs  show.rs
