[package]
name = "lll"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
crossterm = { version = "0.28.1", features = ["event-stream"] }
dirs = "5.0.1"
env_logger = "0.11.5"
futures-util = "0.3.31"
hashbrown = "0.15.0"
lazy_static = "1.5.0"
log = "0.4.22"
ratatui = "0.28.1"
reqwest = { version = "0.12.8", features = ["json"] }
rspotify = { version = "0.13.3", features = ["cli", "dotenvy", "env-file", "webbrowser"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
