[package]
name = "rataify"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
crossterm = { version = "0.28.1", features = ["event-stream", "serde"] }
dirs = "5.0.1"
futures = "0.3.31"
env_logger = "0.11.5"
log = "0.4.22"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
hashbrown = "0.15.0"
strum = { version = "0.26.3", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
rspotify = { version = "0.13.3", features = ["cli", "dotenvy", "env-file", "webbrowser"] }

image = "0.25.4"

ratatui = { version = "0.28.1", features = ["serde"] }
ratatui-image = { version = "2.0.1", features = ["crossterm", "serde"] }
reqwest = { version = "0.12.8", features = ["json"] }
