[package]
name = "rotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ugc-image-upload = []
user-read-playback-state = []
user-modify-playback-state = []
user-read-currently-playing = []
app-remote-control = []
streaming = []
playlist-read-private = []
playlist-read-collaborative = []
playlist-modify-private = []
playlist-modify-public = []
user-follow-modify = []
user-follow-read = []
user-read-playback-position = []
user-top-read = []
user-read-recently-played = []
user-library-modify = []
user-library-read = []
user-read-email = []
user-read-private = []
user-soa-link = []
user-soa-unlink = []
user-manage-entitlements = []
user-manage-partner = []
user-create-partner = []

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_urlencoded = "0.7.1"
serde_qs = "0.12.0"

color-eyre = "0.6.2"

reqwest = "0.11.24"
hyper = { version = "1.2.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
http-body-util = "0.1.0"
html-to-string-macro = "0.2.5"

tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
lazy_static = "1.4.0"
open = "5.1.1"

uuid = { version = "1.7.0", features = ["v4"] }
base64 = "0.22.0"
urlencoding = "2.1.3"
home = "0.5.9"
chrono = { version = "0.4.35", features = ["serde"] }
dotenvy = "0.15.7"
envy = "0.4.2"
dialoguer = "0.11.0"
terminal_size = "0.3.0"
