[package]
name = "tupy"
version = "0.1.0"
edition = "2021"

[features]
defaults = ["caching"]
caching = ["dep:dirs"]
env-file = ["dep:dotenvy"]
future = []

[dependencies]
dotenvy = { version = "0.15.7", optional = true }
dirs = { version = "5.0.1", optional = true }

log = "0.4.21"

# Used for generating random identifiers for pkce and auth state params.
getrandom = "0.2.15"
base64 = "0.22.1"
sha2 = "0.10.8"

# Core dependencies that make requests and parse responses.
# TODO: Remove `paste` dependency in favor of explicit request building.
paste = "1.0.15"
chrono = "0.4.38"
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_path_to_error = "0.1.16"
serde_json = "1.0.117"
serde_urlencoded = "0.7.1"
