[package]
name = "api-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
tupy = { path = "../", features = ["env-file", "caching"] }

crossterm = "0.27.0"
dialoguer = { version = "0.11.0", features = ["fuzzy-matcher", "fuzzy-select"] }
env_logger = "0.11.3"

# Async runtime
tokio = { version = "1.38.0", features = ["rt-multi-thread", "net", "signal", "signal-hook-registry", "time", "macros", "fs", "bytes"] }

# Self host a server that handles redirect and automatically parses auth code.
http-body-util = "0.1.2"
hyper = { version = "1.3.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.5", features = ["http1", "server"] }
indoc = "2.0.5"
serde_qs = "0.13.0"
open = "5.1.4"
serde = { version = "1.0.203", features = ["derive"] }
log = "0.4.21"
